Review Request 10370: fix rm ha phase 2 - reregister appmaster after rm restart